<resources>
    <string name="app_name">UserDatabase</string>
    <string name="title_activity_createnewuser">Createnewuser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="foodidinput">foodidinput</string>
    <string name="submit">submit</string>
    <string name="foodid">foodid</string>
    <string name="view_reviews">View reviews</string>
    <string name="username">username</string>
    <string name="back">back</string>
    <string name="add_review">Add review</string>
    <string name="please_slection_from_the_following_options_to_get_started">Please slection from the following options to get started</string>
    <string name="welcome_user">Welcome user</string>
    <string name="refood">Refood</string>
    <string name="location">Location</string>
    <string name="please_select_from_the_following_options_to_get_started">please select from the following options to get started</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="go_home">Go home</string>
    <string name="rating">Rating</string>
    <string name="vegen">Vegen</string>
    <string name="discription">Discription</string>
    <string name="vegan">Vegan</string>
    <string name="price">Price</string>
    <string name="add_restaurant">Add eating place</string>
    <string name="view_places">View eating places</string>
    <string name="loc_label">Location</string>
    <string name="storeName">Store name</string>
    <string name="food_name">food name</string>
    <string name="discription_of_food">Discription of food</string>
    <string name="comments_on_the_food">Comments on the food</string>
    <string name="todo">TODO</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="add_antoher_review">Add antoher review</string>
    <string name="you_have_succesfully_submited_a_review_please_select_from_the_following">You have succesfully submited a review please select from the following</string>
    <string name="all_currently_review_stores">All currently review stores</string>
    <string name="name">Name</string>
    <string name="refresh">Refresh</string>
    <string name="view_food_items">View food items</string>
    <string name="exit_app">Exit app</string>
    <string name="click_on_a_button_to_select_what_you_would_like_to_review_once_you_have_selected_a_pop_up_will_show_you_the_details_you_wish_to_view_to_go_back_from_this_prompt_press_the_back_button_on_your_device">Click on a button to select what you would like to review once you have selected a pop up will show you the details you wish to view to go back from this prompt press the back button on your device</string>
</resources>