<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEatery">
    <TextView
        android:id="@+id/Comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/loc_label"
        android:labelFor="@id/reviewInput"
        app:layout_constraintBottom_toTopOf="@+id/reviewInput"
        app:layout_constraintStart_toStartOf="@+id/reviewInput" />

    <EditText
        android:id="@+id/reviewInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        />



    <TextView
        android:id="@+id/placeNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/storeName"
        android:labelFor="@id/ratingInput"
        app:layout_constraintBottom_toTopOf="@+id/ratingInput"
        app:layout_constraintStart_toStartOf="@+id/ratingInput" />

    <EditText
        android:id="@+id/ratingInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/reviewInput"
        app:layout_constraintStart_toStartOf="@+id/reviewInput"
        app:layout_constraintTop_toBottomOf="@+id/reviewInput"
        android:autofillHints="Name of shop" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/ratingInput"
        app:layout_constraintTop_toBottomOf="@+id/ratingInput" />


</androidx.constraintlayout.widget.ConstraintLayout>